# ZK-trap-grid

./: .env.example  .gitignore  LICENSE  README.md  START_HERE.md  TESTNET_VERIFICATION_TROUBLESHOOTING.md  test-local.sh  test-local_trap-grid.sh  test-local_trap-grid_all-circuits.sh  test-verification.sh  test-verification_trap-grid.sh  test-verification_trap-grid_all-circuits.sh  test-verification_trap-grid_trap-grid-position-movement-circuit.sh  test-verification_trap_grid.sh
app/: README.md  bun.lockb  package.json
association_sets/: Nargo.toml
association_sets/src/: main.nr
circuits/position-movement/: CHANGELOG.md  Nargo.toml  info.sh  (+1 more)
contracts/: .env.example  README.md  deploy-local.sh  deploy-testnet.sh  setup.sh
docs/: DEPLOYMENT_GUIDE.md  GAME_HUB_INTEGRATION.md  QUICKSTART.md  README-POSITION-MOVEMENT.md  STATUS.md  TESTNET_DEPLOYMENT.md  TRAP_GRID_README.md
private_limit_orders/: Nargo.toml  Prover.toml  Verifier.toml  package-lock.json  package.json
secret_word_puzzle/: Nargo.toml  Prover.toml  Verifier.toml
strong_password_proof/: Nargo.toml  Prover.toml
trap-grid/: info.sh
trap-grid-dapp-and-contracts/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README-POSITION-MOVEMENT.md  deploy-local.sh  deploy-testnet.sh  dev.sh  setup.sh  start-network-cli.sh  start-network.sh
trap-grid-dapp-and-contracts/contracts/mock-game-hub/: Cargo.toml
trap-grid-dapp-and-contracts/contracts/mock-game-hub/src/: lib.rs
trap_grid/: Nargo.toml  TEST_DATA_README.md  build_public_inputs.js  count_pub_inputs.js  generate_test_data.js  package.json
(+133 files in other folders)
